Index Page Update

--- a/GroupB_Project/Views/Home/Index.cshtml
+++ b/GroupB_Project/Views/Home/Index.cshtml
@@ -2,7 +2,13 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="main">
+    <div class=" main__container">
+        <div class=" main_content">
+            <h1>POMODORO</h1>
+            <h2>TIME TRACKING</h2>
+            <p>See where your time goes!!!</p>
+            <button class=" = "main_btn"><a href="/">Get Started</a></button>"
+        </div>
+    </div> 
 </div>
