--- a/GroupB_Project/Views/Home/htmlpage.html
+++ b/GroupB_Project/Views/Home/htmlpage.html
@@ -21,7 +21,7 @@
                 </li>
                 <li class="navbar__item">
                     <a href="/tech.html" class="navbar__links">
-                        Tech
+                        Time Tracking 
                     </a>
                 </li>
                 <li class="navbar__item">
