Landing Page Update

--- a/GroupB_Project/wwwroot/css/site.css
+++ b/GroupB_Project/wwwroot/css/site.css
@@ -60,6 +60,7 @@ html {
 
 body {
   /* Margin bottom by footer height */
+  background-color: #141414;
   margin-bottom: 60px;
 }
 .footer {
@@ -68,4 +69,33 @@ body {
   width: 100%;
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
+}
+
+.main {
+    background-color: #141414;
+}
+
+.main__container {
+    display: grid;
+    grid-template-colums: 1fr 1fr;
+    align-items: center;
+    justify-self: center;
+    margin: 0 auto;
+    height: 90vh; 
+    background-color: #141414;
+    z-index: 1;
+    width: 100%;
+    max-width: 1300px;
+    padding: 0 50px; 
+}
+
+.main__content h1 {
+    font-size: 4rem;
+    background-color: #ff8177;
+    background-image: linear-gradient(tnone top, #ff0844 0%, #ffb199 100%);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent; 
 }
