--- a/GroupB_Project/wwwroot/css/site.css
+++ b/GroupB_Project/wwwroot/css/site.css
@@ -13,7 +13,7 @@ a {
 }
 
 .btn-primary {
-  color: #fff;
+  color: #141414;
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
@@ -58,17 +58,18 @@ html {
   min-height: 100%;
 }
 
-body {
-  /* Margin bottom by footer height */
+/*body {
+  
   background-color: #141414;
   margin-bottom: 60px;
 }
+*/
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    line-height: 60px; /* Vertically center the text there */
 }
 
 .main {
