--- a/GroupB_Project/Views/Shared/_Layout.cshtml
+++ b/GroupB_Project/Views/Shared/_Layout.cshtml
@@ -10,8 +10,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
+        <nav class= "navbar">
+             <!--"navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">-->
+            <div class="navbar__container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">GroupB_Project</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -31,20 +32,21 @@
             </div>
         </nav>
     </header>
-    <div class="container">
-    <main role="main" class="pb-3">
-                @RenderBody()
-            </main>
-        </div>
+    
 
     <!--Hero Section -->
     <div class="main">
         <div class="main__container">
+            <main role="main" class="pb-3">
+                @RenderBody()
+            </main>
             <div class="main__content">
                 <h1>POMODORO</h1>
                 <h2>Get Back Your Time</h2>
                 <p>See how time blocking works!</p>
-                <button class="main__btn"><a href="/">Get Started</a></button>
+                <button class="main__btn">
+                <a href="/">Get Started</a>
+                </button>
             </div>
             <div class="main__img--container">
                 <img src="https://images.pexels.com/photos/9880350/pexels-photo-9880350.png?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="pic" id="main__img">
