--- a/GroupB_Project/Views/Home/Index.cshtml
+++ b/GroupB_Project/Views/Home/Index.cshtml
@@ -1,29 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
-    <div class="main">
-        <div class="main__container">
-            <main role="main" class="pb-3">
-              
-            </main>
-            <div class="main__content">
-                <h1>POMODORO</h1>
-                <h2>Get Back Your Time</h2>
-                <p>See how time blocking works!</p>
-
-                <button class="main__btn">
-                    <a href="/">Get Started</a>
-                </button>
-            </div>
-            <div class="main__img--container">
-                <img src="https://images.pexels.com/photos/9880350/pexels-photo-9880350.png?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="pic" id="main__img">
-            </div>
-        </div>
-    </div>
 }
 
-@*<div class="text-center">
-        <h1 class="display-4">Welcome</h1>
-
-        <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    </div>*@
-
+<div class="text-center">
+    <h1 class="display-4">Welcome</h1>
+    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+</div>
