--- a/GroupB_Project/Views/Home/Index.cshtml
+++ b/GroupB_Project/Views/Home/Index.cshtml
@@ -2,7 +2,43 @@
     ViewData["Title"] = "Home Page";
 }
 
-@*<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>*@
+<div class="text-center">
+        <h1 class="display-4">Welcome</h1>
+        <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    </div>
+
+<!--Hero Section -->
+<!-- <div class="main">
+    <div class="main__container">
+        <main role="main" class="pb-3">
+
+        </main>
+        <div class="main__content">
+            <h1>POMODORO</h1>
+            <h2>Get Back Your Time</h2>
+            <p>See how time blocking works!</p>
+            <button class="main__btn">
+                <a href="/">Get Started</a>
+            </button>
+        </div>
+        <div class="main__img--container">
+            <img src="https://images.pexels.com/photos/9880350/pexels-photo-9880350.png?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="pic" id="main__img">
+        </div>
+    </div>
+</div>
+<!-- Services Section  -->
+<!-- <div class="services">
+    <h1>See what the hype is about</h1>
+    <div class="services__container">
+        <div class="services__card">
+            <h2>Experience Bliss</h2>
+            <p>AI Powered Technology</p>
+            <button>Ger Started</button>
+        </div>
+        <div class="services__card">
+            <h2>Are you Ready?</h2>
+            <p>Take the Leap!</p>
+            <button>Ger Started</button>
+        </div>
+    </div>
+</div> -->
