--- a/GroupB_Project/Views/Timer/Index.cshtml
+++ b/GroupB_Project/Views/Timer/Index.cshtml
@@ -5,12 +5,52 @@
 
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <style>
+        .timer_numbers {
+            color: white;
+            font-size: 48px;
+            text-align: center;
+        }
+        .timer_buttons {
+            text-align:center;
+        }
+        .startButton {
+            height: 50px;
+            width: 100px;
+            background-color: green;
+            color: white;
+        }
+        .stopButton {
+            height: 50px;
+            width: 100px;
+            background-color: red;
+            color: white;
+        }
+        .resetButton {
+            height: 50px;
+            width: 100px;
+        }
+    </style>
+</head>
+<body>
+    <br /><br />
+    <div class="timer">
+        <div class="timer_numbers">
+            <span id="minutes">25</span>:<span id="seconds">00</span>
+        </div>
+        <div class="timer_buttons">
+            <button onclick="startTimer" class="startButton">Start</button>
+            <button onclick="stopTimer" class="stopButton">Stop</button>
+            <button onclick="resetTimer" class="resetButton">Reset</button>
+        </div>
+    </div>
+    <br /><br />
     <script>
         function startTimer() {
 
         }
 
-        function pauseTimer() {
+        function stopTimer() {
 
         }
 
@@ -18,16 +58,4 @@
 
         }
     </script>
-</head>
- <body>
-     <div class="timer" style="background-color: rgba(128, 128, 128, .5); display: inline-block;">
-         <div class="timer_numbers" style="color: white; font-size: 48px; text-align: center;">
-             <span id="minutes">25</span>:<span id="seconds">00</span>
-         </div>
-         <div class="timer_buttons">
-             <button onclick="startTimer" style="height: 50px; width: 100px; background-color: green; color: white;">Start</button>
-             <button onclick="pauseTimer" style="height: 50px; width: 100px; background-color: red; color: white;">Pause</button>
-             <button onclick="resetTimer" style="height: 50px; width: 100px;">Reset</button>
-         </div>
-     </div>
- </body>
+</body>
