update of the plan structre

--- a/GroupB_Project/Views/Plans/Inputs.cshtml
+++ b/GroupB_Project/Views/Plans/Inputs.cshtml
@@ -1,6 +1,6 @@
 ﻿@model GroupB_Project.Models.Plans
 
-<form method=" Post" asp-action="Create">
+<form method=" Post" asp-action="Inputs">
     <div class="border p-3>
         <div class="form-group row">
             <h2 class="text-black-50 pl-3">Let's Shceudle Your Next Session!</h2>
@@ -25,7 +25,7 @@
                 <div class=" col-12">
                     <div class="form-group row">
                         <div class="col-6">
-                            <input type="submit" class="btn-dark w-100" value="Schedule" />
+                            <input type="submit" class="btn-dark w-100" value="Let's Plan!'" />
                         </div>
                         <div class="col-6">
                             <a asp-action="Index" class="btn-warning w-100">Back</a>
