progress on google api

--- a/GroupB_Project/Views/Schedule/Index.cshtml
+++ b/GroupB_Project/Views/Schedule/Index.cshtml
@@ -1,4 +1,14 @@
-﻿
+﻿@using GroupB_Project;
+
 @{
     ViewData["Title"] = "Home Page";
+    <div class="main">
+        <div class="main__container">
+            <main role="main" class="pb-3">
+
+              
+            </main>
+            
+        </div>
+    </div>
 }
