--- a/GroupB_Project/Views/Plans/Inputs.cshtml
+++ b/GroupB_Project/Views/Plans/Inputs.cshtml
@@ -1,5 +1,8 @@
 ﻿@model GroupB_Project.Models.Plans
 
+
+
+
 <form method="Post" asp-action="Inputs">
     <div class="border p-3>
         <div class="form-group row">
@@ -15,11 +18,24 @@
                     <div class="col-6">
                         <label asp-for="subject"></label>
                     </div>
-                </div> 
+                </div>
                 @*Row 2*@
                 <div class="form-group row">
                     <div class="col-6">
                         <input asp-for="subject" class="form-control" />
+                    </div>
+                    <div class="col-3">
+                        @*Date-----------------------------------------------------Date*@
+                        <div class="container">
+                            <div class="row">
+                                <div class="form-group">
+                                    @Html.LabelFor(model => model.DateTime, new { @class = "control-label" })
+                                    @Html.EditorFor(model => model.DateTime, new { htmlAttributes = new { @readonly = "true" } })
+                        </div>
+
+
+
+                        @*Date-----------------------------------------------------Date*@
                     </div>
                 </div>
                 <div class=" col-12">
