--- a/GroupB_Project/Views/Plans/Inputs.cshtml
+++ b/GroupB_Project/Views/Plans/Inputs.cshtml
@@ -3,6 +3,13 @@
 
 
 
+<link href="~/Content/bootstrap.css" rel="stylesheet" />
+
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+
+
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
 <form method="Post" asp-action="Inputs">
     <div class="border p-3>
         <div class="form-group row">
@@ -26,30 +33,39 @@
                     </div>
                     <div class="col-3">
                         @*Date-----------------------------------------------------Date*@
-                        <div class="container">
-                            <div class="row">
-                                <div class="form-group">
-                                    @Html.LabelFor(model => model.DateTime, new { @class = "control-label" })
-                                    @Html.EditorFor(model => model.DateTime, new { htmlAttributes = new { @readonly = "true" } })
+                       @using (Html.BeginForm())
+            {
+                @Html.EditorFor(Model=>Model.dtmDate, new {htmlAttributes = new {@class="Plans"}})
+            }
+
+                        @section scripts{
+                                                <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+
+                        <script>
+                            $(function () {
+                                $(".Plans").Plans();
+                            })
+                        </script>
+
+            }
+
+
+
+                                @*Date-----------------------------------------------------Date*@
+                            </div>
                         </div>
-
-
-
-                        @*Date-----------------------------------------------------Date*@
-                    </div>
-                </div>
-                <div class=" col-12">
-                    <div class="form-group row">
-                        <div class="col-6">
-                            <input type="submit" class="btn-dark w-100" value="Let's Plan!'" />
-                        </div>
-                        <div class="col-6">
-                            <a asp-action="Index" class="btn-warning w-100">Back</a>
+                        <div class=" col-12">
+                            <div class="form-group row">
+                                <div class="col-6">
+                                    <input type="submit" class="btn-dark w-100" value="Let's Plan!'" />
+                                </div>
+                                <div class="col-6">
+                                    <a asp-action="Index" class="btn-warning w-100">Back</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
 </form>
 
