--- a/GroupB_Project/Views/ScheduledSessions/Create.cshtml
+++ b/GroupB_Project/Views/ScheduledSessions/Create.cshtml
@@ -4,27 +4,33 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Schedule New Session</h1>
+<h1>Schedule Session</h1>
+
 
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
-           <!--- <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <input asp-for="UserId" class="form-control" />
-                <span asp-validation-for="UserId" class="text-danger"></span>
-            </div>-->
+                <label asp-for="ScheduledDateStart" class="control-label">Start</label>
+                <input asp-for="ScheduledDateStart" class="form-control" />
+                <span asp-validation-for="ScheduledDateStart" class="text-danger"></span>
+            </div>
             <div class="form-group">
-                <label asp-for="ScheduledDate" class="control-label"></label>
-                <input asp-for="ScheduledDate" class="form-control" />
-                <span asp-validation-for="ScheduledDate" class="text-danger"></span>
+                <label asp-for="ScheduleDateEnd" class="control-label">End</label>
+                <input asp-for="ScheduleDateEnd" class="form-control" />
+                <span asp-validation-for="ScheduleDateEnd" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Subject" class="control-label"></label>
                 <input asp-for="Subject" class="form-control" />
                 <span asp-validation-for="Subject" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Location" class="control-label"></label>
+                <input asp-for="Location" class="form-control" />
+                <span asp-validation-for="Location" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Schedule" class="btn btn-primary" />
