--- a/GroupB_Project/Views/ScheduledSessions/Details.cshtml
+++ b/GroupB_Project/Views/ScheduledSessions/Details.cshtml
@@ -10,17 +10,30 @@
     <h4>ScheduledSession</h4>
     <hr />
     <dl class="row">
+        
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ScheduledDate)
+            @Html.DisplayNameFor(model => model.ScheduledDateStart)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ScheduledDate)
+            @Html.DisplayFor(model => model.ScheduledDateStart)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ScheduleDateEnd)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ScheduleDateEnd)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Subject)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Subject)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Location)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Location)
         </dd>
     </dl>
 </div>
