--- a/GroupB_Project/Views/ScheduledSessions/Edit.cshtml
+++ b/GroupB_Project/Views/ScheduledSessions/Edit.cshtml
@@ -15,14 +15,24 @@
             <input type="hidden" asp-for="Id" />
             
             <div class="form-group">
-                <label asp-for="ScheduledDate" class="control-label"></label>
-                <input asp-for="ScheduledDate" class="form-control" />
-                <span asp-validation-for="ScheduledDate" class="text-danger"></span>
+                <label asp-for="ScheduledDateStart" class="control-label"></label>
+                <input asp-for="ScheduledDateStart" class="form-control" />
+                <span asp-validation-for="ScheduledDateStart" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ScheduleDateEnd" class="control-label"></label>
+                <input asp-for="ScheduleDateEnd" class="form-control" />
+                <span asp-validation-for="ScheduleDateEnd" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Subject" class="control-label"></label>
                 <input asp-for="Subject" class="form-control" />
                 <span asp-validation-for="Subject" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Location" class="control-label"></label>
+                <input asp-for="Location" class="form-control" />
+                <span asp-validation-for="Location" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
