--- a/GroupB_Project/Views/Timer/Index.cshtml
+++ b/GroupB_Project/Views/Timer/Index.cshtml
@@ -17,18 +17,26 @@
         .startButton {
             height: 50px;
             width: 100px;
+            border-radius: 4px;
             background-color: green;
             color: white;
+            font-weight: bold;
         }
         .stopButton {
             height: 50px;
             width: 100px;
+            border-radius: 4px;
             background-color: red;
             color: white;
+            font-weight: bold;
         }
         .resetButton {
             height: 50px;
             width: 100px;
+            border-radius: 4px;
+            background-color: black;
+            color: white;
+            font-weight: bold;
         }
     </style>
 </head>
