--- a/GroupB_Project/Views/Home/Index.cshtml
+++ b/GroupB_Project/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
 
         <div class="col">
 
-            <h2 class="display-4 text-center">Quick Start</h2>
+            <h2 class="display-4 text-center">HOLD</h2>
             <div class="text-center">
                 <a asp-area="" asp-controller="Home" asp-action="Privacy">
                     <img src="https://images.pexels.com/photos/4144100/pexels-photo-4144100.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" class="thumbnail rounded img-fluid" alt="Timer Image" />
@@ -30,7 +30,7 @@
 
            <div class="col">
 
-            <h2 class="display-4 text-center">Quick Start</h2>
+            <h2 class="display-4 text-center">Start Session</h2>
             <div class="text-center">
                 <a asp-area="" asp-controller="Home" asp-action="Privacy">
                     <img src="https://images.pexels.com/photos/4144100/pexels-photo-4144100.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" class="thumbnail rounded img-fluid" alt="Timer Image" />
@@ -44,7 +44,7 @@
 
             <h2 class="display-4 text-center">Plan</h2>
             <div class="text-center">
-                <a asp-area="" asp-controller="Home" asp-action="Privacy">
+                <a asp-area="" asp-controller="" asp-action="Privacy">
                     <img src="https://images.pexels.com/photos/4144101/pexels-photo-4144101.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" class="thumbnail rounded img-fluid" alt="Timer Image" />
                 </a>
             </div>
