--- a/GroupB_Project/Views/Shared/_Layout.cshtml
+++ b/GroupB_Project/Views/Shared/_Layout.cshtml
@@ -18,20 +18,21 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between text-right">
                     @*<ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Plans" asp-action="Index">Plan</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Plans" asp-action="Inputs">Plan</a>
-                        </li>
-                    </ul>*@
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            </li>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Plans" asp-action="Index">Plan</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Plans" asp-action="Inputs">Plan</a>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Shared" asp-action="_LoginPartial"></a>
+            </li>
+        </ul>*@
                     <div class="text-right">
                         <partial name="_LoginPartial" />
                     </div>
