--- a/GroupB_Project/Views/Home/Index.cshtml
+++ b/GroupB_Project/Views/Home/Index.cshtml
@@ -18,10 +18,10 @@
 
         <div class="col">
 
-            <h2 class="display-4 text-center">HOLD</h2>
+            <h2 class="display-4 text-center">History</h2>
             <div class="text-center">
-                <a asp-area="" asp-controller="Home" asp-action="Privacy">
-                    <img src="https://images.pexels.com/photos/4144100/pexels-photo-4144100.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" class="thumbnail rounded img-fluid" alt="Timer Image" />
+                <a asp-area="" asp-controller="ScheduledSessions" asp-action="Index">
+                    <img src="https://images.pexels.com/photos/2682452/pexels-photo-2682452.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" class="thumbnail rounded img-fluid" alt="Timer Image" />
                 </a>
             </div>
         </div>
@@ -32,7 +32,7 @@
 
             <h2 class="display-4 text-center">Start Session</h2>
             <div class="text-center">
-                <a asp-area="" asp-controller="Home" asp-action="Privacy">
+                <a asp-area="" asp-controller="ScheduledSession" asp-action="Create">
                     <img src="https://images.pexels.com/photos/4144100/pexels-photo-4144100.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" class="thumbnail rounded img-fluid" alt="Timer Image" />
                 </a>
             </div>
@@ -44,7 +44,7 @@
 
             <h2 class="display-4 text-center">Plan</h2>
             <div class="text-center">
-                <a asp-area="" asp-controller="" asp-action="Privacy">
+                <a asp-area="" asp-controller="ScheduledSessions" asp-action="Create">
                     <img src="https://images.pexels.com/photos/4144101/pexels-photo-4144101.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" class="thumbnail rounded img-fluid" alt="Timer Image" />
                 </a>
             </div>
