Add podomoro timer in the satart session

--- a/GroupB_Project/Views/Shared/_Layout.cshtml
+++ b/GroupB_Project/Views/Shared/_Layout.cshtml
@@ -6,6 +6,10 @@
     <title>@ViewData["Title"] - Pomodoro</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/lib/jquery/dist/jquery.min.js" />
+    <link href="~/css/pomodoro-timer.css" rel="stylesheet">
+    <script src="~/js/pomodoro-timer.js"></script>
+
 </head>
 <body>
     <header>
