added few comments

--- a/GroupB_Project/Views/Timer/Index.cshtml
+++ b/GroupB_Project/Views/Timer/Index.cshtml
@@ -22,7 +22,8 @@
     <br /><br />
     <script>
         var timer;
-
+        
+        // start button that sets 25 min timer
         $("#startButton").click(function startTimer() {
             var endTime = new Date().getTime() + 25 * 60000;
 
@@ -47,10 +48,12 @@
             }, 1000);
         });
 
+        // pauses timer
         $("#stopButton").click(function stopStimer() {
             clearInterval(timer);
         });
 
+        // restarts 25 min timer
         $("#resetButton").click(function resetTimer() {
 
         });
