set timer to select by default to avoid NaN error

--- a/GroupB_Project/Views/Pomodoro/Index.cshtml
+++ b/GroupB_Project/Views/Pomodoro/Index.cshtml
@@ -7,6 +7,7 @@
         <h1 class="text-center">Pomodoro Timer</h1>
         <h2 class="text-center">
             <span>
+                <script>window.onload = function() { onPomodoroTimer(); }</script>
                 <button id="pomodoroButton" class="btn btn-default" type="submit" onclick="onPomodoroTimer()">Pomodoro</button>
                 <button id="shortButton" class="btn btn-default" type="submit" onclick="onShortTimer()">Short Break</button>
                 <button id="longButton" class="btn btn-default" type="submit" onclick="onLongTimer()">Long Break</button>
