--- a/GroupB_Project/Views/ScheduledSessions/Create.cshtml
+++ b/GroupB_Project/Views/ScheduledSessions/Create.cshtml
@@ -1,43 +1,85 @@
 ﻿@model GroupB_Project.Models.ScheduledSession
 
+
+
 @{
+
     ViewData["Title"] = "Create";
+
 }
+
+
 
 <h1>Schedule Session</h1>
 
 
+
+
+
 <hr />
+
 <div class="row">
+
     <div class="col-md-4">
+
         <form asp-action="Create">
+
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
             <div class="form-group">
-                <label asp-for="ScheduledDateStart" class="control-label">Start</label>
+
+                <label asp-for="ScheduledDateStart" class="control-label"></label>
+
                 <input asp-for="ScheduledDateStart" class="form-control" />
+
                 <span asp-validation-for="ScheduledDateStart" class="text-danger"></span>
+
             </div>
+
             <div class="form-group">
+
                 <label asp-for="Subject" class="control-label"></label>
+
                 <input asp-for="Subject" class="form-control" />
+
                 <span asp-validation-for="Subject" class="text-danger"></span>
+
             </div>
+
             <div class="form-group">
+
                 <label asp-for="Location" class="control-label"></label>
+
                 <input asp-for="Location" class="form-control" />
+
                 <span asp-validation-for="Location" class="text-danger"></span>
+
             </div>
+
             <div class="form-group">
+
                 <input type="submit" value="Schedule" class="btn btn-primary" />
+
             </div>
+
         </form>
+
     </div>
+
 </div>
+
+
 
 <div>
+
     <a asp-action="Index">Back to List</a>
+
 </div>
 
+
+
 @section Scripts {
+
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
 }
