addeded site login independet of g back

--- a/GroupB_Project/Views/Shared/_Layout.cshtml
+++ b/GroupB_Project/Views/Shared/_Layout.cshtml
@@ -37,9 +37,9 @@
             <a class="nav-link text-dark" asp-area="" asp-controller="Shared" asp-action="_LoginPartial"></a>
             </li>
         </ul>*@
-                    @*<div class="text-right">
+                    <div class="text-right">
                         <partial name="_LoginPartial" />
-                    </div>*@
+                    </div>
                 </div>
             </div>
         </nav>
