--- a/GroupB_Project/Views/Shared/_Layout.cshtml
+++ b/GroupB_Project/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
             <a class="nav-link text-dark" asp-area="" asp-controller="Shared" asp-action="_LoginPartial"></a>
             </li>
         </ul>*@
-                    <div class="text-right">
+                    <div class="text-right justify-content-end">
                         <partial name="_LoginPartial" />
                     </div>
                 </div>
